--- a/templates/pwl.html
+++ b/templates/pwl.html
@@ -1,45 +1,179 @@
 <!doctype html>
-<html>
-    <title>Generate a PWL file for SPICE</title>
-<head>
-<style>
-.errors { color: red; }
-</style>
-{{ dropzone.load_css() }}
+<html lang="en">
+<title>Generate a PWL file for SPICE</title>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="Dan White <dan@whiteaudio.com></dan@whiteaudio.com>">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
+
+    <!-- Custom styles for this template -->
+    <link href="{{ url_for('static', filename='starter-template.css') }}" rel="stylesheet">
+
+    <style>
+    .errors { color: red; }
+    </style>
+    {{ dropzone.load_css() }}
 </head>
 
-<body>
+  <body>
 
-<h1>Generate a PWL file for SPICE</h1>
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-<h2>Instructions</h2>
+      <div class="collapse navbar-collapse" id="navbarsExampleDefault">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link disabled" href="#">Disabled</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+            <div class="dropdown-menu" aria-labelledby="dropdown01">
+              <a class="dropdown-item" href="#">Action</a>
+              <a class="dropdown-item" href="#">Another action</a>
+              <a class="dropdown-item" href="#">Something else here</a>
+            </div>
+          </li>
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+          <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+      </div>
+    </nav>
 
+  <main role="main" class="container">
+
+    <div class="starter-template">
+      <h1>Generate a PWL file for SPICE</h1>
+      <p class="lead">Upload a <code>.vwf</code> file and receive the corresponding <code>.pwl</code> file suitable for including in a SPICE simulation.</p>
+
+      {{ dropzone.create('pwl') }}
+    </div>
+
+    <div class="container">
+      <h2>VWF input file format</h2>
+<blockquote>
+<figure class="highlight bg-light">
+<pre><code># comments are the "#" character to the end of the line
+[name=value parameters, one per line]
+[space-separated column labels for voltage source names AND node names]
+[one line per bit interval of 0 or 1 for each column, no spaces between]
+</code></pre>
+</figure></blockquote>
+
+<h3>Example <code>.vwf</code> contents for testing an adder:</h3>
+
+<blockquote>
+<figure class="highlight bg-light">
+<pre><code># Two 4-bit inputs
+clockdelay=500p
+clockrisefall = 100p
+risefall=200p
+bittime=1n
+bitlow=0
+bithigh=5
+a3 a2 a1 a0 b3 b2 b1 b0   #eight voltage sources
+00000000
+00010001
+00010010
+11111111
+01011010
+01011011
+</code></pre>
+</figure></blockquote>
+
+<h3>... generates the following <code>.pwl</code> file:</h3>
+<blockquote>
+<figure class="highlight bg-light">
+<pre><code>Vclock clock 0 pulse(0 5 500p 1.000E-10 1.000E-10 4.5000E-10 1.0E-9)
+
+Va3 a3 0 PWL
++ 0 0
++ 3.0000E-9 0
++ 3.2000E-9 5
++ 4.0000E-9 5
++ 4.2000E-9 0
+
+Va2 a2 0 PWL
++ 0 0
++ 3.0000E-9 0
++ 3.2000E-9 5
+
+Va1 a1 0 PWL
++ 0 0
++ 3.0000E-9 0
++ 3.2000E-9 5
++ 4.0000E-9 5
++ 4.2000E-9 0
+
+Va0 a0 0 PWL
++ 0 0
++ 1.0000E-9 0
++ 1.2000E-9 5
+
+Vb3 b3 0 PWL
++ 0 0
++ 3.0000E-9 0
++ 3.2000E-9 5
+
+Vb2 b2 0 PWL
++ 0 0
++ 3.0000E-9 0
++ 3.2000E-9 5
++ 4.0000E-9 5
++ 4.2000E-9 0
+
+Vb1 b1 0 PWL
++ 0 0
++ 2.0000E-9 0
++ 2.2000E-9 5
+
+Vb0 b0 0 PWL
++ 0 0
++ 1.0000E-9 0
++ 1.2000E-9 5
++ 2.0000E-9 5
++ 2.2000E-9 0
++ 3.0000E-9 0
++ 3.2000E-9 5
++ 4.0000E-9 5
++ 4.2000E-9 0
++ 5.0000E-9 0
++ 5.2000E-9 5
+</code></pre>
+</figure></blockquote>
+
+    </div>
+
+      <br>
 <p>
-This form accepts a CSV file exported from the Blackboard gradebook.
-It uses only the "<b>First Name</b>, "<b>Last Name</b>", and "<b>Student ID</b>" columns from that export.
-Edit the CSV file as desired to use preferred names, etc.
-
-<p>Get to the download form by:
-Grade Center &rarr; Full Grade Center &rarr; Work Offline &rarr; Download.
-
-<p>Select the following options:
-
-<ul>
-    <li>User Information Only</li>
-    <li>Delimiter Type: Comma</li>
-    <li>Include Hidden Information: Yes  (to ensure "Student ID" is included)</li>
-</ul>
-
-<p>Errors or comments?  Contact <a href="mailto:dan.white@valpo.edu?subject=chiptools/pwl">Dan White</a>.
-
-<p>
-The software which runs this site is available at <a href="https://github.com/etihwnad/valpo-photo-roster">https://github.com/etihwnad/valpo-photo-roster</a>.
-<p>
-<hr>
+The software which runs this site is available at <a href="https://github.com/wiredlab/chiptools">https://github.com/wiredlab/chiptools</a>.
+</p>
 
 
-<!--{{ dropzone.create(action='pwl') }} -->
-{{ dropzone.create('pwl') }}
+    </div>
+
+  </main><!-- /.container -->
+
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
 
 
 </body>
