Allow comments in bitvectors

--- a/templates/pwl.html
+++ b/templates/pwl.html
@@ -44,7 +44,7 @@ a3 a2 a1 a0 b3 b2 b1 b0   #eight voltage sources
 00000000
 00010001
 00010010
-11111111
+11111111   # comments are allowed here
 01011010
 01011011
 </code></pre>
